adding to feature branch

--- a/analytics.html
+++ b/analytics.html
@@ -10,7 +10,24 @@
   
 </head>
 <body>
-
+<h1>My name is Kadeen</h1>
+<h2>this is the feature branch</h2>
+  <style>
+    body{background-color:yellow;}
+    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+    .row.content {height: 550px}
+    
+    /* Set gray background color and 100% height */
+    .sidenav {
+      background-color: red;
+      height: 100%;
+    }
+        
+    /* On small screens, set height to 'auto' for the grid */
+    @media screen and (max-width: 767px) {
+      .row.content {height: auto;} 
+    }
+  </style>
 <nav class="navbar navbar-inverse visible-xs">
   <div class="container-fluid">
     <div class="navbar-header">
