--- a/analytics.html
+++ b/analytics.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <h1>My name is Kadeen</h1>
-<h2>this is the feature branch</h2>
+<h2>this is the feature branch
+  
+</h2>
   <style>
     body{background-color:yellow;}
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
